--- a/Gallery.html
+++ b/Gallery.html
@@ -102,151 +102,103 @@
         }
       });
     </script>
-    
-    <!-- ======= Masonry Gallery Section START ======= -->
-    <section class="masonry-gallery-section" style="padding: 48px 0; background: #fff;">
-      <div class="container-fluid">
-        <div class="masonry-gallery-grid">
-          <div class="masonry-gallery-item">
-            <a href="images/gallery_1.jpg" class="masonry-gallery-link" data-caption="Fashion Shoot" data-lg-size="1406-1390">
-              <img src="images/gallery_1.jpg" alt="Fashion Shoot" class="masonry-gallery-img">
-              <div class="masonry-gallery-overlay">
-                <span class="masonry-gallery-caption">Fashion Shoot</span>
-              </div>
-            </a>
-          </div>
-          <div class="masonry-gallery-item">
-            <a href="images/gallery_2.jpg" class="masonry-gallery-link" data-caption="Jewellery" data-lg-size="1406-1390">
-              <img src="images/gallery_2.jpg" alt="Jewellery" class="masonry-gallery-img">
-              <div class="masonry-gallery-overlay">
-                <span class="masonry-gallery-caption">Jewellery</span>
-              </div>
-            </a>
-          </div>
-          <div class="masonry-gallery-item">
-            <a href="images/gallery_3.jpg" class="masonry-gallery-link" data-caption="Food" data-lg-size="1406-1390">
-              <img src="images/gallery_3.jpg" alt="Food" class="masonry-gallery-img">
-              <div class="masonry-gallery-overlay">
-                <span class="masonry-gallery-caption">Food</span>
-              </div>
-            </a>
-          </div>
-          <div class="masonry-gallery-item">
-            <a href="images/gallery_4.jpg" class="masonry-gallery-link" data-caption="Product" data-lg-size="1406-1390">
-              <img src="images/gallery_4.jpg" alt="Product" class="masonry-gallery-img">
-              <div class="masonry-gallery-overlay">
-                <span class="masonry-gallery-caption">Product</span>
-              </div>
-            </a>
-          </div>
-          <!-- Add more items as needed -->
+    <!-- ======= Fashion Section START ======= -->
+    <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
+      <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
+        <h1 class="gallery-title" style="font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: #bfa76a; margin-bottom: 18px; text-align: center;">Fashion Photography</h1>
+        <p class="gallery-desc" style="font-size: 1.18rem; color: #222; line-height: 1.7; margin-bottom: 24px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Experience the elegance and creativity of our fashion shoots, where every detail is styled for impact and beauty.</p>
+        <div style="text-align: center; margin-bottom: 18px;">
+          <img src="images/gallery_1.jpg" alt="Fashion Gallery" style="max-width: 100%; border-radius: 18px; box-shadow: 0 8px 32px rgba(0,0,0,0.10);">
         </div>
+        <div style="text-align: center; margin-bottom: 32px;">
+          <a href="Fashion.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.15rem; font-weight: 600; border-radius: 24px; padding: 12px 38px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Explore</a>
+        </div>
+        <div style="margin-bottom: 48px;"></div>
+        <h2 style="font-family: 'Playfair Display', serif; font-size: 1.6rem; color: #bfa76a; margin-bottom: 12px; text-align: center;">Fashion Gallery Highlights</h2>
+        <p style="font-size: 1.08rem; color: #222; line-height: 1.6; margin-bottom: 32px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Discover our curated selection of fashion images, showcasing style, attitude, and the latest trends in a modern, minimal setting.</p>
       </div>
     </section>
-    <!-- ======= Masonry Gallery Section END ======= -->
-    <style>
-      .masonry-gallery-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 18px;
-        margin: 0 auto;
-        max-width: 1400px;
-      }
-      .masonry-gallery-item {
-        position: relative;
-        overflow: hidden;
-        border-radius: 16px;
-        box-shadow: 0 2px 12px rgba(0,0,0,0.07);
-        background: #fff;
-      }
-      .masonry-gallery-img {
-        width: 100%;
-        display: block;
-        height: auto;
-        object-fit: cover;
-        transition: transform 0.3s cubic-bezier(.23,1,.32,1);
-        border-radius: 16px;
-      }
-      .masonry-gallery-item:hover .masonry-gallery-img {
-        transform: scale(1.04);
-      }
-      .masonry-gallery-overlay {
-        position: absolute;
-        left: 0; right: 0; bottom: 0;
-        top: 0;
-        background: rgba(34,34,34,0.08);
-        opacity: 0;
-        transition: opacity 0.3s;
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        pointer-events: none;
-        border-radius: 16px;
-      }
-      .masonry-gallery-item:hover .masonry-gallery-overlay {
-        opacity: 1;
-        pointer-events: auto;
-      }
-      .masonry-gallery-caption {
-        color: #fff;
-        background: rgba(34,34,34,0.7);
-        font-size: 1.08rem;
-        font-family: 'Montserrat', Arial, sans-serif;
-        padding: 8px 18px;
-        border-radius: 12px;
-        margin: 18px;
-        margin-bottom: 24px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.10);
-        letter-spacing: 0.01em;
-      }
-      @media (max-width: 767.98px) {
-        .masonry-gallery-grid {
-          grid-template-columns: 1fr;
-          gap: 10px;
-        }
-        .masonry-gallery-caption {
-          font-size: 1rem;
-          margin-bottom: 12px;
-        }
-      }
-    </style>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/lightgallery-all.min.js"></script>
-    <script>
-      // Initialize Masonry after images are loaded
-      document.addEventListener('DOMContentLoaded', function() {
-        var grid = document.querySelector('.masonry-gallery-grid');
-        if (grid && window.Masonry) {
-          imagesLoaded(grid, function() {
-            new Masonry(grid, {
-              itemSelector: '.masonry-gallery-item',
-              columnWidth: '.masonry-gallery-item',
-              percentPosition: true,
-              gutter: 18
-            });
-          });
-        }
-        // Initialize LightGallery for Masonry Gallery
-        if (grid && window.lightGallery) {
-          lightGallery(grid, {
-            selector: '.masonry-gallery-link',
-            thumbnail: true,
-            download: false,
-            mode: 'lg-fade',
-            share: true,
-            zoom: true,
-            fullScreen: true,
-            autoplay: true,
-            actualSize: true,
-            getCaptionFromTitleOrAlt: false,
-            addClass: 'masonry-gallery-lightbox',
-            subHtmlSelectorRelative: true,
-            exThumbImage: 'data-caption'
-          });
-        }
-      });
-    </script>
+    <!-- ======= Fashion Section END ======= -->
+    <!-- ======= Food Section START ======= -->
+    <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
+      <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
+        <h1 class="gallery-title" style="font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: #bfa76a; margin-bottom: 18px; text-align: center;">Food Photography</h1>
+        <p class="gallery-desc" style="font-size: 1.18rem; color: #222; line-height: 1.7; margin-bottom: 24px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Savor the artistry of our food photography, capturing flavors, textures, and the essence of culinary excellence.</p>
+        <div style="text-align: center; margin-bottom: 18px;">
+          <img src="images/gallery_3.jpg" alt="Food Gallery" style="max-width: 100%; border-radius: 18px; box-shadow: 0 8px 32px rgba(0,0,0,0.10);">
+        </div>
+        <div style="text-align: center; margin-bottom: 32px;">
+          <a href="Food.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.15rem; font-weight: 600; border-radius: 24px; padding: 12px 38px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Explore</a>
+        </div>
+        <div style="margin-bottom: 48px;"></div>
+        <h2 style="font-family: 'Playfair Display', serif; font-size: 1.6rem; color: #bfa76a; margin-bottom: 12px; text-align: center;">Food Gallery Highlights</h2>
+        <p style="font-size: 1.08rem; color: #222; line-height: 1.6; margin-bottom: 32px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Browse our food gallery for mouthwatering images that celebrate the beauty and diversity of cuisine, styled for a modern look.</p>
+      </div>
+    </section>
+    <!-- ======= Food Section END ======= -->
+    <!-- ======= Product Section START ======= -->
+    <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
+      <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
+        <h1 class="gallery-title" style="font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: #bfa76a; margin-bottom: 18px; text-align: center;">Product Photography</h1>
+        <p class="gallery-desc" style="font-size: 1.18rem; color: #222; line-height: 1.7; margin-bottom: 24px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Showcase your products with clarity and style. Our product photography highlights features and design in a minimal, elegant way.</p>
+        <div style="text-align: center; margin-bottom: 18px;">
+          <img src="images/gallery_4.jpg" alt="Product Gallery" style="max-width: 100%; border-radius: 18px; box-shadow: 0 8px 32px rgba(0,0,0,0.10);">
+        </div>
+        <div style="text-align: center; margin-bottom: 32px;">
+          <a href="Product.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.15rem; font-weight: 600; border-radius: 24px; padding: 12px 38px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Explore</a>
+        </div>
+        <div style="margin-bottom: 48px;"></div>
+        <h2 style="font-family: 'Playfair Display', serif; font-size: 1.6rem; color: #bfa76a; margin-bottom: 12px; text-align: center;">Product Gallery Highlights</h2>
+        <p style="font-size: 1.08rem; color: #222; line-height: 1.6; margin-bottom: 32px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Explore our product gallery for images that blend minimalism and sophistication, perfect for modern brands and e-commerce.</p>
+      </div>
+    </section>
+    <!-- ======= Product Section END ======= -->
+
+    <footer class="site-footer" style="padding: 48px 0; background: #222;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <h3 class="footer-heading" style="color: #fff; font-size: 1.5rem; font-weight: 700; margin-bottom: 24px;">About Us</h3>
+            <p style="color: #ddd; line-height: 1.6;">We are Pallab Photography, capturing moments that matter with a blend of creativity, passion, and technical expertise.</p>
+          </div>
+          <div class="col-md-4 mb-4">
+            <h3 class="footer-heading" style="color: #fff; font-size: 1.5rem; font-weight: 700; margin-bottom: 24px;">Quick Links</h3>
+            <ul class="list-unstyled footer-links" style="padding-left: 0;">
+              <li><a href="index.html" style="color: #ddd;">Home</a></li>
+              <li><a href="Gallery.html" style="color: #ddd;">Gallery</a></li>
+              <li><a href="about.html" style="color: #ddd;">About</a></li>
+              <li><a href="contact.html" style="color: #ddd;">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 mb-4">
+            <h3 class="footer-heading" style="color: #fff; font-size: 1.5rem; font-weight: 700; margin-bottom: 24px;">Contact Us</h3>
+            <p style="color: #ddd; line-height: 1.6;">123 Street Name, City, Country</p>
+            <p style="color: #ddd; line-height: 1.6;">Email: info@pallabphotography.com</p>
+            <p style="color: #ddd; line-height: 1.6;">Phone: +123 456 7890</p>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-12 text-center">
+            <p style="color: #ddd; font-size: 0.9rem;">&copy; 2023 Pallab Photography. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/lightgallery.min.js"></script>
+  <script src="js/bootstrap-datepicker.js"></script>
+  <script src="js/swiper.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/main.js"></script>
+
+</body>
+</html>
 
 
 
