--- a/Gallery.html
+++ b/Gallery.html
@@ -102,6 +102,62 @@
         }
       });
     </script>
+    <!-- ======= Gallery Thumbnails Row START ======= -->
+    <section class="gallery-thumbnails-row" style="padding: 48px 0 0 0; background: #fff;">
+      <div class="container-fluid" style="max-width: 1100px; margin: 0 auto;">
+        <div class="row" style="display: flex; gap: 24px; justify-content: center;">
+          <div class="col-md-4" style="flex: 1 1 0; max-width: 340px;">
+            <div class="gallery-thumb" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
+              <img src="images/gallery_1.jpg" alt="Fashion" style="width: 100%; height: 220px; object-fit: cover; border-radius: 18px; transition: transform 0.3s;">
+              <div class="gallery-thumb-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
+                <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Fashion</span>
+              </div>
+              <a href="Fashion.html" class="btn btn-lg btn-explore" style="position: absolute; left: 50%; bottom: 18px; transform: translateX(-50%); background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; opacity: 0; transition: opacity 0.3s;">Explore</a>
+            </div>
+          </div>
+          <div class="col-md-4" style="flex: 1 1 0; max-width: 340px;">
+            <div class="gallery-thumb" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
+              <img src="images/gallery_3.jpg" alt="Food" style="width: 100%; height: 220px; object-fit: cover; border-radius: 18px; transition: transform 0.3s;">
+              <div class="gallery-thumb-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
+                <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Food</span>
+              </div>
+              <a href="Food.html" class="btn btn-lg btn-explore" style="position: absolute; left: 50%; bottom: 18px; transform: translateX(-50%); background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; opacity: 0; transition: opacity 0.3s;">Explore</a>
+            </div>
+          </div>
+          <div class="col-md-4" style="flex: 1 1 0; max-width: 340px;">
+            <div class="gallery-thumb" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
+              <img src="images/gallery_4.jpg" alt="Product" style="width: 100%; height: 220px; object-fit: cover; border-radius: 18px; transition: transform 0.3s;">
+              <div class="gallery-thumb-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
+                <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Product</span>
+              </div>
+              <a href="Product.html" class="btn btn-lg btn-explore" style="position: absolute; left: 50%; bottom: 18px; transform: translateX(-50%); background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; opacity: 0; transition: opacity 0.3s;">Explore</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <style>
+        .gallery-thumb:hover img {
+          transform: scale(1.04);
+        }
+        .gallery-thumb:hover .gallery-thumb-overlay {
+          opacity: 1;
+        }
+        .gallery-thumb:hover .btn-explore {
+          opacity: 1;
+        }
+        @media (max-width: 991.98px) {
+          .gallery-thumbnails-row .row {
+            flex-direction: column;
+            gap: 18px;
+          }
+          .gallery-thumbnails-row .col-md-4 {
+            max-width: 100%;
+          }
+        }
+      </style>
+    </section>
+    <!-- ======= Gallery Thumbnails Row END ======= -->
+
     <!-- ======= Fashion Section START ======= -->
     <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
       <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
