--- a/Gallery.html
+++ b/Gallery.html
@@ -102,159 +102,57 @@
         }
       });
     </script>
-    <!-- ======= Gallery Thumbnails Row START ======= -->
-    <section class="gallery-thumbnails-row" style="padding: 48px 0 0 0; background: #fff;">
+    
+    <!-- ======= Gallery Squares Row START ======= -->
+    <section class="gallery-squares-row" style="padding: 48px 0 0 0; background: #fff;">
       <div class="container-fluid" style="max-width: 1100px; margin: 0 auto;">
-        <div class="row" style="display: flex; gap: 24px; justify-content: center;">
-          <div class="col-md-4" style="flex: 1 1 0; max-width: 340px;">
-            <div class="gallery-thumb" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
-              <img src="images/gallery_1.jpg" alt="Fashion" style="width: 100%; height: 220px; object-fit: cover; border-radius: 18px; transition: transform 0.3s;">
-              <div class="gallery-thumb-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
+        <div class="row" style="display: flex; gap: 32px; justify-content: center;">
+          <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
+            <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
+              <img src="images/img_1.jpg" alt="Gallery 1" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1 / 1;">
+              <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
                 <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Fashion</span>
               </div>
-              <a href="Fashion.html" class="btn btn-lg btn-explore" style="position: absolute; left: 50%; bottom: 18px; transform: translateX(-50%); background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; opacity: 0; transition: opacity 0.3s;">Explore</a>
             </div>
           </div>
-          <div class="col-md-4" style="flex: 1 1 0; max-width: 340px;">
-            <div class="gallery-thumb" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
-              <img src="images/gallery_3.jpg" alt="Food" style="width: 100%; height: 220px; object-fit: cover; border-radius: 18px; transition: transform 0.3s;">
-              <div class="gallery-thumb-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
+          <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
+            <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
+              <img src="images/img_2.jpg" alt="Gallery 2" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1 / 1;">
+              <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
                 <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Food</span>
               </div>
-              <a href="Food.html" class="btn btn-lg btn-explore" style="position: absolute; left: 50%; bottom: 18px; transform: translateX(-50%); background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; opacity: 0; transition: opacity 0.3s;">Explore</a>
             </div>
           </div>
-          <div class="col-md-4" style="flex: 1 1 0; max-width: 340px;">
-            <div class="gallery-thumb" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
-              <img src="images/gallery_4.jpg" alt="Product" style="width: 100%; height: 220px; object-fit: cover; border-radius: 18px; transition: transform 0.3s;">
-              <div class="gallery-thumb-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
+          <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
+            <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
+              <img src="images/img_3.jpg" alt="Gallery 3" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1 / 1;">
+              <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
                 <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Product</span>
               </div>
-              <a href="Product.html" class="btn btn-lg btn-explore" style="position: absolute; left: 50%; bottom: 18px; transform: translateX(-50%); background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; opacity: 0; transition: opacity 0.3s;">Explore</a>
             </div>
           </div>
         </div>
       </div>
       <style>
-        .gallery-thumb:hover img {
+        .gallery-square:hover img {
           transform: scale(1.04);
         }
-        .gallery-thumb:hover .gallery-thumb-overlay {
-          opacity: 1;
-        }
-        .gallery-thumb:hover .btn-explore {
+        .gallery-square:hover .gallery-square-overlay {
           opacity: 1;
         }
         @media (max-width: 991.98px) {
-          .gallery-thumbnails-row .row {
+          .gallery-squares-row .row {
             flex-direction: column;
             gap: 18px;
           }
-          .gallery-thumbnails-row .col-md-4 {
+          .gallery-squares-row .col-md-4 {
             max-width: 100%;
           }
         }
       </style>
     </section>
-    <!-- ======= Gallery Thumbnails Row END ======= -->
+    <!-- ======= Gallery Squares Row END ======= -->
 
-    <!-- ======= Fashion Section START ======= -->
-    <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
-      <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
-        <h1 class="gallery-title" style="font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: #bfa76a; margin-bottom: 18px; text-align: center;">Fashion Photography</h1>
-        <p class="gallery-desc" style="font-size: 1.18rem; color: #222; line-height: 1.7; margin-bottom: 24px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Experience the elegance and creativity of our fashion shoots, where every detail is styled for impact and beauty.</p>
-        <div style="text-align: center; margin-bottom: 18px;">
-          <img src="images/gallery_1.jpg" alt="Fashion Gallery" style="max-width: 100%; border-radius: 18px; box-shadow: 0 8px 32px rgba(0,0,0,0.10);">
-        </div>
-        <div style="text-align: center; margin-bottom: 32px;">
-          <a href="Fashion.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.15rem; font-weight: 600; border-radius: 24px; padding: 12px 38px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Explore</a>
-        </div>
-        <div style="margin-bottom: 48px;"></div>
-        <h2 style="font-family: 'Playfair Display', serif; font-size: 1.6rem; color: #bfa76a; margin-bottom: 12px; text-align: center;">Fashion Gallery Highlights</h2>
-        <p style="font-size: 1.08rem; color: #222; line-height: 1.6; margin-bottom: 32px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Discover our curated selection of fashion images, showcasing style, attitude, and the latest trends in a modern, minimal setting.</p>
-      </div>
-    </section>
-    <!-- ======= Fashion Section END ======= -->
-    <!-- ======= Food Section START ======= -->
-    <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
-      <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
-        <h1 class="gallery-title" style="font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: #bfa76a; margin-bottom: 18px; text-align: center;">Food Photography</h1>
-        <p class="gallery-desc" style="font-size: 1.18rem; color: #222; line-height: 1.7; margin-bottom: 24px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Savor the artistry of our food photography, capturing flavors, textures, and the essence of culinary excellence.</p>
-        <div style="text-align: center; margin-bottom: 18px;">
-          <img src="images/gallery_3.jpg" alt="Food Gallery" style="max-width: 100%; border-radius: 18px; box-shadow: 0 8px 32px rgba(0,0,0,0.10);">
-        </div>
-        <div style="text-align: center; margin-bottom: 32px;">
-          <a href="Food.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.15rem; font-weight: 600; border-radius: 24px; padding: 12px 38px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Explore</a>
-        </div>
-        <div style="margin-bottom: 48px;"></div>
-        <h2 style="font-family: 'Playfair Display', serif; font-size: 1.6rem; color: #bfa76a; margin-bottom: 12px; text-align: center;">Food Gallery Highlights</h2>
-        <p style="font-size: 1.08rem; color: #222; line-height: 1.6; margin-bottom: 32px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Browse our food gallery for mouthwatering images that celebrate the beauty and diversity of cuisine, styled for a modern look.</p>
-      </div>
-    </section>
-    <!-- ======= Food Section END ======= -->
-    <!-- ======= Product Section START ======= -->
-    <section class="gallery-section" style="padding: 48px 0 0 0; background: #fff;">
-      <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
-        <h1 class="gallery-title" style="font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: #bfa76a; margin-bottom: 18px; text-align: center;">Product Photography</h1>
-        <p class="gallery-desc" style="font-size: 1.18rem; color: #222; line-height: 1.7; margin-bottom: 24px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Showcase your products with clarity and style. Our product photography highlights features and design in a minimal, elegant way.</p>
-        <div style="text-align: center; margin-bottom: 18px;">
-          <img src="images/gallery_4.jpg" alt="Product Gallery" style="max-width: 100%; border-radius: 18px; box-shadow: 0 8px 32px rgba(0,0,0,0.10);">
-        </div>
-        <div style="text-align: center; margin-bottom: 32px;">
-          <a href="Product.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.15rem; font-weight: 600; border-radius: 24px; padding: 12px 38px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Explore</a>
-        </div>
-        <div style="margin-bottom: 48px;"></div>
-        <h2 style="font-family: 'Playfair Display', serif; font-size: 1.6rem; color: #bfa76a; margin-bottom: 12px; text-align: center;">Product Gallery Highlights</h2>
-        <p style="font-size: 1.08rem; color: #222; line-height: 1.6; margin-bottom: 32px; text-align: center; font-family: 'Montserrat', Arial, sans-serif;">Explore our product gallery for images that blend minimalism and sophistication, perfect for modern brands and e-commerce.</p>
-      </div>
-    </section>
-    <!-- ======= Product Section END ======= -->
-
-    <footer class="site-footer" style="padding: 48px 0; background: #222;">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-4">
-            <h3 class="footer-heading" style="color: #fff; font-size: 1.5rem; font-weight: 700; margin-bottom: 24px;">About Us</h3>
-            <p style="color: #ddd; line-height: 1.6;">We are Pallab Photography, capturing moments that matter with a blend of creativity, passion, and technical expertise.</p>
-          </div>
-          <div class="col-md-4 mb-4">
-            <h3 class="footer-heading" style="color: #fff; font-size: 1.5rem; font-weight: 700; margin-bottom: 24px;">Quick Links</h3>
-            <ul class="list-unstyled footer-links" style="padding-left: 0;">
-              <li><a href="index.html" style="color: #ddd;">Home</a></li>
-              <li><a href="Gallery.html" style="color: #ddd;">Gallery</a></li>
-              <li><a href="about.html" style="color: #ddd;">About</a></li>
-              <li><a href="contact.html" style="color: #ddd;">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-4 mb-4">
-            <h3 class="footer-heading" style="color: #fff; font-size: 1.5rem; font-weight: 700; margin-bottom: 24px;">Contact Us</h3>
-            <p style="color: #ddd; line-height: 1.6;">123 Street Name, City, Country</p>
-            <p style="color: #ddd; line-height: 1.6;">Email: info@pallabphotography.com</p>
-            <p style="color: #ddd; line-height: 1.6;">Phone: +123 456 7890</p>
-          </div>
-        </div>
-        <div class="row mt-4">
-          <div class="col-12 text-center">
-            <p style="color: #ddd; font-size: 0.9rem;">&copy; 2023 Pallab Photography. All Rights Reserved.</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </div>
-
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/lightgallery.min.js"></script>
-  <script src="js/bootstrap-datepicker.js"></script>
-  <script src="js/swiper.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/main.js"></script>
-
-</body>
-</html>
 
 
 
