--- a/Gallery.html
+++ b/Gallery.html
@@ -113,6 +113,9 @@
                 <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Fashion</span>
               </div>
             </div>
+            <div style="text-align: center; margin-top: 18px;">
+              <a href="Fashion.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Fashion Photography</a>
+            </div>
           </div>
           <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
             <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
@@ -121,6 +124,9 @@
                 <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Food</span>
               </div>
             </div>
+            <div style="text-align: center; margin-top: 18px;">
+              <a href="Food.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Food Photography</a>
+            </div>
           </div>
           <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
             <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
@@ -128,6 +134,9 @@
               <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
                 <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Product</span>
               </div>
+            </div>
+            <div style="text-align: center; margin-top: 18px;">
+              <a href="Product.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Product Photography</a>
             </div>
           </div>
         </div>
