--- a/Gallery.html
+++ b/Gallery.html
@@ -154,34 +154,45 @@
           }
           .gallery-squares-row .row {
             flex-direction: column;
-            gap: 28px;
+            gap: 38px;
             align-items: center;
           }
           .gallery-squares-row .col-md-4 {
             max-width: 100%;
             width: 100%;
-            padding: 0 0 0 0;
+            padding: 0;
+            margin-bottom: 0;
           }
           .gallery-square {
             aspect-ratio: 1 / 1;
             min-width: 0;
             width: 100%;
             max-width: 340px;
-            margin: 0 auto;
+            margin: 0 auto 16px auto;
+            display: block;
           }
           .gallery-square img {
             border-radius: 18px;
             width: 100%;
             height: 100%;
             object-fit: cover;
+            display: block;
           }
           .gallery-square-overlay span {
             font-size: 1.08rem;
             padding: 6px 12px;
           }
+          .gallery-squares-row .col-md-4 > div:last-child {
+            margin-top: 12px !important;
+            margin-bottom: 8px !important;
+          }
           .btn-explore {
             font-size: 1rem;
             padding: 8px 18px;
+            width: 90%;
+            max-width: 260px;
+            margin: 0 auto;
+            display: block;
           }
         }
       </style>
