--- a/Gallery.html
+++ b/Gallery.html
@@ -154,7 +154,7 @@
           }
           .gallery-squares-row .row {
             flex-direction: column;
-            gap: 38px;
+            gap: 44px;
             align-items: center;
           }
           .gallery-squares-row .col-md-4 {
@@ -162,13 +162,16 @@
             width: 100%;
             padding: 0;
             margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
           }
           .gallery-square {
             aspect-ratio: 1 / 1;
             min-width: 0;
             width: 100%;
             max-width: 340px;
-            margin: 0 auto 16px auto;
+            margin: 0 auto 18px auto;
             display: block;
           }
           .gallery-square img {
@@ -183,16 +186,17 @@
             padding: 6px 12px;
           }
           .gallery-squares-row .col-md-4 > div:last-child {
-            margin-top: 12px !important;
-            margin-bottom: 8px !important;
+            margin-top: 22px !important;
+            margin-bottom: 16px !important;
           }
           .btn-explore {
             font-size: 1rem;
-            padding: 8px 18px;
-            width: 90%;
+            padding: 10px 20px;
+            width: 95%;
             max-width: 260px;
             margin: 0 auto;
             display: block;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.10);
           }
         }
       </style>
