--- a/Gallery.html
+++ b/Gallery.html
@@ -60,10 +60,8 @@
                     <li><a href="Fashion.html">Fashion</a></li>
                     <li><a href="Food.html">Food</a></li>
                     <li><a href="Product.html">Product</a></li>
-                    
                   </ul>
                 </li>
-              
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -93,147 +91,73 @@
     </header>
     <!-- ======= NAVIGATOR SECTION END ======= -->
 
-    <script>
-      // Adjust body padding-top to navbar height to prevent content overlap
-      document.addEventListener('DOMContentLoaded', function() {
-        var navbar = document.querySelector('.site-navbar');
-        if (navbar) {
-          document.body.style.paddingTop = navbar.offsetHeight + 'px';
-        }
-      });
-    </script>
-    <!-- ======= Gallery Squares Row START ======= -->
-    <section class="gallery-squares-row" style="padding: 48px 0 0 0; background: #fff;">
-      <div class="container-fluid" style="max-width: 1100px; margin: 0 auto;">
-        <div class="row" style="display: flex; gap: 32px; justify-content: center;">
-          <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
-            <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
-              <img src="images/img_1.jpg" alt="Gallery 1" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1 / 1;">
-              <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
-                <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Fashion</span>
-              </div>
-            </div>
-            <div style="text-align: center; margin-top: 18px;">
-              <a href="Fashion.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Fashion Photography</a>
-            </div>
+    <!-- ======= Gallery Heading and Description START ======= -->
+    <section class="gallery-header-section" style="padding: 110px 0 32px 0; background: #fff; text-align: center;">
+      <h1 style="font-size: 2.6rem; font-family: 'Playfair Display', serif; color: #bfa76a; font-weight: 700; margin-bottom: 12px;">Gallery</h1>
+      <p style="font-size: 1.15rem; color: #222; max-width: 600px; margin: 0 auto;">Discover our curated selection of fashion photography, capturing style, elegance, and creativity in every frame.</p>
+    </section>
+    <!-- ======= Gallery Heading and Description END ======= -->
+
+    <!-- ======= Fashion Strip START ======= -->
+    <section class="fashion-strip-section" style="background: #f8f6f2; padding: 32px 0;">
+      <div class="container-fluid" style="max-width: 980px; margin: 0 auto;">
+        <div class="fashion-strip-row" style="display: flex; gap: 32px; align-items: center; justify-content: center; flex-wrap: wrap;">
+          <!-- Left: Image -->
+          <div class="fashion-strip-left" style="flex: 1 1 320px; max-width: 420px; min-width: 240px;">
+            <a href="Fashion.html" style="display: block; border-radius: 18px; overflow: hidden; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
+              <img src="images/img_1.jpg" alt="Fashion" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1.1 / 1;">
+            </a>
           </div>
-          <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
-            <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
-              <img src="images/img_2.jpg" alt="Gallery 2" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1 / 1;">
-              <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
-                <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Food</span>
-              </div>
-            </div>
-            <div style="text-align: center; margin-top: 18px;">
-              <a href="Food.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Food Photography</a>
-            </div>
-          </div>
-          <div class="col-md-4" style="flex: 1 1 0; max-width: 320px;">
-            <div class="gallery-square" style="position: relative; overflow: hidden; border-radius: 18px; box-shadow: 0 4px 18px rgba(0,0,0,0.10); width: 100%; aspect-ratio: 1 / 1; background: #f8f6f2;">
-              <img src="images/img_3.jpg" alt="Gallery 3" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1 / 1;">
-              <div class="gallery-square-overlay" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; background: rgba(34,34,34,0.12); opacity: 0; transition: opacity 0.3s; display: flex; align-items: center; justify-content: center;">
-                <span style="color: #fff; font-size: 1.3rem; font-family: 'Montserrat', Arial, sans-serif; background: rgba(34,34,34,0.7); padding: 8px 18px; border-radius: 12px;">Product</span>
-              </div>
-            </div>
-            <div style="text-align: center; margin-top: 18px;">
-              <a href="Product.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 8px 28px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none;">Product Photography</a>
-            </div>
+          <!-- Right: Text -->
+          <div class="fashion-strip-right" style="flex: 1 1 320px; max-width: 420px; min-width: 240px; display: flex; flex-direction: column; justify-content: center; align-items: flex-start;">
+            <h2 style="font-size: 2rem; font-family: 'Playfair Display', serif; color: #bfa76a; font-weight: 700; margin-bottom: 10px;">Fashion</h2>
+            <p style="font-size: 1.08rem; color: #222; margin-bottom: 22px;">Step into the world of fashion photography, where every image tells a story of style, attitude, and inspiration. Explore our latest shoots and creative concepts.</p>
+            <a href="Fashion.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 10px 32px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; transition: background 0.2s, transform 0.2s;">Explore</a>
           </div>
         </div>
       </div>
       <style>
-        .gallery-square:hover img {
+        .fashion-strip-section .fashion-strip-left a:hover img {
           transform: scale(1.04);
         }
-        .gallery-square:hover .gallery-square-overlay {
-          opacity: 1;
+        .btn-explore:hover {
+          background: #d32f2f !important;
+          color: #fff !important;
+          box-shadow: 0 4px 18px rgba(0,0,0,0.15);
+          transform: scale(1.05);
         }
         @media (max-width: 991.98px) {
-          .gallery-squares-row {
-            padding: 24px 8px 0 8px !important;
-          }
-          .gallery-squares-row .row {
+          .fashion-strip-row {
             flex-direction: column;
-            gap: 44px;
-            align-items: center;
+            gap: 24px;
           }
-          .gallery-squares-row .col-md-4 {
+          .fashion-strip-left, .fashion-strip-right {
             max-width: 100%;
-            width: 100%;
-            padding: 0;
-            margin-bottom: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-          }
-          .gallery-square {
-            aspect-ratio: 1 / 1;
             min-width: 0;
             width: 100%;
-            max-width: 340px;
-            margin: 0 auto 18px auto;
-            display: block;
           }
-          .gallery-square img {
-            border-radius: 18px;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            display: block;
+          .fashion-strip-right {
+            align-items: center;
+            text-align: center;
           }
-          .gallery-square-overlay span {
-            font-size: 1.08rem;
-            padding: 6px 12px;
+          .fashion-strip-right h2 {
+            font-size: 1.5rem;
           }
-          .gallery-squares-row .col-md-4 > div:last-child {
-            margin-top: 22px !important;
-            margin-bottom: 16px !important;
+          .fashion-strip-right p {
+            font-size: 1rem;
           }
           .btn-explore {
             font-size: 1rem;
-            padding: 10px 20px;
-            width: 95%;
-            max-width: 260px;
+            padding: 10px 24px;
+            width: 90%;
+            max-width: 220px;
             margin: 0 auto;
             display: block;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.10);
           }
         }
       </style>
     </section>
-    <!-- ======= Gallery Squares Row END ======= -->
-
-    <style>
-      body {
-        padding-top: 80px !important;
-      }
-      .site-navbar {
-        transition: box-shadow 0.3s, background 0.3s;
-      }
-      .site-navbar:hover {
-        box-shadow: 0 4px 18px rgba(0,0,0,0.12);
-        background: #f8f6f2;
-      }
-      .btn-explore:hover {
-        background: #d32f2f !important;
-        color: #fff !important;
-        box-shadow: 0 4px 18px rgba(0,0,0,0.15);
-        transform: scale(1.05);
-      }
-    </style>
-
-  </div>
-
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/lightgallery-all.min.js"></script>
-  <script src="js/bootstrap-datepicker.js"></script>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/main.js"></script>
+    <!-- ======= Fashion Strip END ======= -->
 
 </body>
 </html>
