--- a/Gallery.html
+++ b/Gallery.html
@@ -159,6 +159,67 @@
     </section>
     <!-- ======= Fashion Strip END ======= -->
 
+    <!-- ======= Food Strip START ======= -->
+    <section class="food-strip-section" style="background: #fff; padding: 32px 0;">
+      <div class="container-fluid" style="max-width: 980px; margin: 0 auto;">
+        <div class="food-strip-row" style="display: flex; gap: 32px; align-items: center; justify-content: center; flex-wrap: wrap;">
+          <!-- Left: Text -->
+          <div class="food-strip-left" style="flex: 1 1 320px; max-width: 420px; min-width: 240px; display: flex; flex-direction: column; justify-content: center; align-items: flex-start;">
+            <h2 style="font-size: 2rem; font-family: 'Playfair Display', serif; color: #bfa76a; font-weight: 700; margin-bottom: 10px;">Food</h2>
+            <p style="font-size: 1.08rem; color: #222; margin-bottom: 22px;">Experience the art of food photography, where every dish is styled and captured to highlight its flavor, texture, and visual appeal. Explore our delicious portfolio.</p>
+            <a href="Food.html" class="btn btn-lg btn-explore" style="background: #bfa76a; color: #fff; font-size: 1.08rem; font-weight: 600; border-radius: 24px; padding: 10px 32px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-transform: uppercase; letter-spacing: 0.04em; border: none; outline: none; transition: background 0.2s, transform 0.2s;">Explore</a>
+          </div>
+          <!-- Right: Image -->
+          <div class="food-strip-right" style="flex: 1 1 320px; max-width: 420px; min-width: 240px;">
+            <a href="Food.html" style="display: block; border-radius: 18px; overflow: hidden; box-shadow: 0 4px 18px rgba(0,0,0,0.10);">
+              <img src="images/img_2.jpg" alt="Food" style="width: 100%; height: 100%; object-fit: cover; border-radius: 18px; transition: transform 0.3s; aspect-ratio: 1.1 / 1;">
+            </a>
+          </div>
+        </div>
+      </div>
+      <style>
+        .food-strip-section .food-strip-right a:hover img {
+          transform: scale(1.04);
+        }
+        .btn-explore:hover {
+          background: #d32f2f !important;
+          color: #fff !important;
+          box-shadow: 0 4px 18px rgba(0,0,0,0.15);
+          transform: scale(1.05);
+        }
+        @media (max-width: 991.98px) {
+          .food-strip-row {
+            flex-direction: column;
+            gap: 24px;
+          }
+          .food-strip-left, .food-strip-right {
+            max-width: 100%;
+            min-width: 0;
+            width: 100%;
+          }
+          .food-strip-left {
+            align-items: center;
+            text-align: center;
+          }
+          .food-strip-left h2 {
+            font-size: 1.5rem;
+          }
+          .food-strip-left p {
+            font-size: 1rem;
+          }
+          .btn-explore {
+            font-size: 1rem;
+            padding: 10px 24px;
+            width: 90%;
+            max-width: 220px;
+            margin: 0 auto;
+            display: block;
+          }
+        }
+      </style>
+    </section>
+    <!-- ======= Food Strip END ======= -->
+
 </body>
 </html>
 
