--- a/Gallery.html
+++ b/Gallery.html
@@ -131,12 +131,17 @@
             flex-direction: column;
             gap: 24px;
           }
-          .fashion-strip-left, .fashion-strip-right {
+          .fashion-strip-left {
+            order: 1;
             max-width: 100%;
             min-width: 0;
             width: 100%;
           }
           .fashion-strip-right {
+            order: 2;
+            max-width: 100%;
+            min-width: 0;
+            width: 100%;
             align-items: center;
             text-align: center;
           }
@@ -192,12 +197,17 @@
             flex-direction: column;
             gap: 24px;
           }
-          .food-strip-left, .food-strip-right {
+          .food-strip-right {
+            order: 1;
             max-width: 100%;
             min-width: 0;
             width: 100%;
           }
           .food-strip-left {
+            order: 2;
+            max-width: 100%;
+            min-width: 0;
+            width: 100%;
             align-items: center;
             text-align: center;
           }
@@ -253,12 +263,17 @@
             flex-direction: column;
             gap: 24px;
           }
-          .product-strip-left, .product-strip-right {
+          .product-strip-left {
+            order: 1;
             max-width: 100%;
             min-width: 0;
             width: 100%;
           }
           .product-strip-right {
+            order: 2;
+            max-width: 100%;
+            min-width: 0;
+            width: 100%;
             align-items: center;
             text-align: center;
           }
