--- a/Gallery.html
+++ b/Gallery.html
@@ -1,3 +1,113 @@
+</div>
+
+    <!-- ======= FOOTER SECTION START ======= -->
+    <footer class="site-footer-custom redesigned-footer">
+      <div class="container-fluid">
+        <div class="row align-items-center py-3">
+          <div class="col-12 col-md-4 text-center text-md-left mb-2 mb-md-0">
+            <span class="footer-section-title">Socials</span>
+            <span class="footer-social-icons ml-2">
+              <a href="https://www.facebook.com/pallabphotography.in" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
+              <a href="https://www.pinterest.com/*" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
+              <a href="https://www.behance.net/*" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
+              <a href="https://www.instagram.com/pallabphotography_" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
+            </span>
+          </div>
+          <div class="col-12 col-md-4 text-center mb-2 mb-md-0">
+            <span class="footer-section-title">Sitemap</span>
+            <span class="footer-links ml-2">
+              <a href="index.html">Home</a> |
+              <a href="Gallery.html">Gallery</a> |
+              <a href="about.html">About</a> |
+              <a href="contact.html">Contact</a>
+            </span>
+          </div>
+          <div class="col-12 col-md-4 text-center text-md-right">
+            <span class="footer-section-title">Contact</span>
+            <span class="footer-contact ml-2">
+              <a href="mailto:pallabphotographykolkata@gmail.com">pallabphotographykolkata@gmail.com</a>
+            </span>
+            <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- ======= FOOTER SECTION END ======= -->
+
+    <style>
+      .site-footer-custom.redesigned-footer {
+        background: #D4C9BE;
+        color: #111;
+        font-family: 'Josefin Sans', Arial, sans-serif;
+        border-top: none;
+        margin-top: 40px;
+        letter-spacing: 0.01em;
+        box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+        font-size: 1.08rem;
+        padding: 0;
+      }
+      .site-footer-custom .footer-section-title {
+        font-weight: 700;
+        color: #d32f2f;
+        font-size: 1.1rem;
+        margin-right: 8px;
+        letter-spacing: 0.02em;
+      }
+      .site-footer-custom .footer-social-icons a {
+        color: #d32f2f;
+        font-size: 1.3rem;
+        margin: 0 6px;
+        display: inline-block;
+        transition: color 0.2s;
+      }
+      .site-footer-custom .footer-social-icons a:hover {
+        color: #111;
+      }
+      .site-footer-custom .footer-links a {
+        color: #111;
+        text-decoration: none;
+        margin: 0 2px;
+        font-weight: 500;
+        transition: color 0.2s;
+      }
+      .site-footer-custom .footer-links a:hover {
+        color: #d32f2f;
+        text-decoration: underline;
+      }
+      .site-footer-custom .footer-contact a {
+        color: #d32f2f;
+        text-decoration: none;
+        font-weight: 500;
+        transition: color 0.2s;
+      }
+      .site-footer-custom .footer-contact a:hover {
+        color: #111;
+        text-decoration: underline;
+      }
+      .site-footer-custom .footer-copyright {
+        font-size: 0.98rem;
+        color: #888;
+        margin-top: 4px;
+      }
+      @media (max-width: 991.98px) {
+        .site-footer-custom .footer-section-title {
+          display: block;
+          margin-bottom: 4px;
+        }
+        .site-footer-custom .footer-social-icons,
+        .site-footer-custom .footer-links,
+        .site-footer-custom .footer-contact {
+          display: block;
+          margin: 0 auto 8px auto;
+        }
+        .site-footer-custom .footer-copyright {
+          margin-top: 8px;
+        }
+        .site-footer-custom .row > div {
+          margin-bottom: 10px;
+        }
+      }
+    </style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
