--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children active">
-                  <a href="Gallery.html">Gallery</a>
+                  <a href="#">Gallery</a>
                   <ul class="dropdown">
                     <li><a href="Fashion.html">Fashion</a></li>
                     <li><a href="Food.html">Food</a></li>
@@ -239,10 +239,10 @@
           <div class="col-12 col-md-4 text-center text-md-left mb-2 mb-md-0">
             <span class="footer-section-title">Socials</span>
             <span class="footer-social-icons ml-2">
-              <a href="https://www.facebook.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
-              <a href="https://www.pinterest.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
-              <a href="https://www.behance.net/thevedicwedding" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
-              <a href="https://www.instagram.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
+              <a href="https://www.facebook.com/pallabphotography" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
+              <a href="https://www.pinterest.com/#" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
+              <a href="https://www.behance.net/#" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
+              <a href="https://www.instagram.com/pallabphotography_" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
            
             </span>
           </div>
