--- a/Fashion.html
+++ b/Fashion.html
@@ -55,7 +55,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children active">
-                  <a href="Gallery.html">Gallery</a>
+                  <a href="#">Gallery</a>
                   <ul class="dropdown">
                     <li><a href="Fashion.html">Fashion</a></li>
                     <li><a href="Food.html">Food</a></li>
@@ -263,7 +263,7 @@
             <span class="footer-section-title">Sitemap</span>
             <span class="footer-links ml-2">
               <a href="index.html">Home</a> |
-              <a href="Gallery.html">Gallery</a> |
+              <a href="#">Gallery</a> |
               
               <a href="about.html">About</a> |
               <a href="contact.html">Contact</a>
