--- a/Gallery.html
+++ b/Gallery.html
@@ -17,7 +17,7 @@
             <span class="footer-section-title">Sitemap</span>
             <span class="footer-links ml-2">
               <a href="index.html">Home</a> |
-              <a href="Gallery.html">Gallery</a> |
+              <a href="#">Gallery</a> |
               <a href="about.html">About</a> |
               <a href="contact.html">Contact</a>
             </span>
