--- a/contact.html
+++ b/contact.html
@@ -128,11 +128,11 @@
     <div class="contact-info-box p-4" style="background: linear-gradient(135deg, #f7f3ef 70%, #ffe3e3 100%); border-radius:18px; box-shadow:0 4px 24px 0 rgba(211,47,47,0.10), 0 1.5px 8px 0 rgba(0,0,0,0.04); border:1.5px solid #e0d2c2;">
       <h3 class="text-black mb-3" style="color:#d32f2f !important; font-size:2.1rem; font-weight:800; letter-spacing:0.01em; text-shadow:0 2px 8px #f7cfcf33;">Contact Information</h3>
       <p class="mb-2"><span class="font-weight-bold">Address:</span> Shop no-3, AS-3, Block- B Arjunpur, Kolkata - 700059</p>
-      <p class="mb-2"><span class="font-weight-bold">Phone:</span> <a href="tel:+919007190290" style="color:#123458; font-weight:600; font-size:1.13em;"><span class="icon-phone" style="font-size:1.1em;vertical-align:middle;margin-right:4px;color:#123458;"></span>+91 9007900710</a>
+      <p class="mb-2"><span class="font-weight-bold">Phone:</span> <a href="tel:+919007190290" style="color:#123458; font-weight:600; font-size:1.13em;"><span class="icon-phone" style="font-size:1.1em;vertical-align:middle;margin-right:4px;color:#123458;"></span>+91 9007190290</a>
         &nbsp;|&nbsp;
         <a href="https://wa.me/919007190290" target="_blank" rel="noopener" style="color:#25D366;font-weight:600;font-size:1.13em;"><span class="icon-whatsapp" style="font-size:1.2em;vertical-align:middle;margin-right:4px;"></span>WhatsApp</a>
       </p>
-      <p class="mb-2"><span class="font-weight-bold">Email:</span> <a href="mailto:pallabphotographykolkata@gmail.com" style="color:#123458; font-weight:600; font-size:1.13em;"><span class="icon-mail_outline" style="font-size:1.1em;vertical-align:middle;margin-right:4px;color:#123458;"></span>thevedicwedding@gmail.com</a></p>
+      <p class="mb-2"><span class="font-weight-bold">Email:</span> <a href="mailto:pallabphotographykolkata@gmail.com" style="color:#123458; font-weight:600; font-size:1.13em;"><span class="icon-mail_outline" style="font-size:1.1em;vertical-align:middle;margin-right:4px;color:#123458;"></span>pallabphotographykolkata@gmail.com</a></p>
       <div class="mb-3 mt-4 rounded-lg overflow-hidden" style="box-shadow:0 2px 12px 0 rgba(211,47,47,0.10); border:1.5px solid #e0d2c2;">
         <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
